2007-03-26  Yves Combe <yves@ycombe.net>

	continue wrok on NSBundle for OSX.
	works on osX.
	- TODO: fix it does not create .config and sqlite fails.
	- TODO: LANG does not work.
	
	* Makefile.am:
	* macosx/PkgInfo:

2007-03-25  Yves Combe <yves@ycombe.net>

	Try to fix the recursion needed by install_name_tool for osx. Untested.

	* Makefile.am:

2007-03-25  Yves Combe <yves@ycombe.net>

	clean ObjC code using standard openstep functions.

	* Makefile.am:
	* configure.in:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-24  Yves Combe <yves@ycombe.net>

	Add icons and Info.plist. Tested with GNUstep.

	* Makefile.am:
	* macosx/Info.plist:
	* macosx/gcompris.svg:

2007-03-24  Yves Combe <yves@ycombe.net>

	continue work on NSBundle.

	* Makefile.am:
	* macosx/fonts.conf:
	* macosx/pangorc:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	add python modules in bundle.
	TODO: install_tool_name as to be ru on lib/lib* too.

	* Makefile.am:
	* macosx/build-gtk.sh:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	segfault fixed.

	* src/gcompris/gcompris-nsbundle.m:

2007-03-23  Yves Combe <yves@ycombe.net>

	Set GTK to run from bundle. TODO: fix segfault.

	* Makefile.am:
	* configure.in:
	* macosx/pangorc:
	* src/gcompris/Makefile.am:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-22  Yves Combe <yves@ycombe.net>

	fix and continue osx bundle creation

	* Makefile.am:

2007-03-22  Yves Combe <yves@ycombe.net>

	reloc gtk libs in osx bundle.
	TODO: fix in GNUstep case.

	* Makefile.am:
	* configure.in:
	* src/gcompris/gcompris-nsbundle.m:

2007-03-20  Yves Combe <yves@ycombe.net>

	Small correction

	* macosx/build-gtk.sh:

2007-03-20  Mohammad DAMT  <mdamt@gnome.org>

	* boards/wordsgame/default-id.xml: Indonesian words by Umar Said <umarsaid@gmail.com>

2007-03-20  Yves Combe <yves@ycombe.net>

	Import modified version of inkscape version of imendio script.
	Allow gcompris dependencies build for OSX.
